# project_toml_parser

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: main.rs
